<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_frame_height"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_spinner_margin_start"
            android:layout_gravity="center|start"
            android:entries="@array/city_names">
        </Spinner>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="@dimen/main_qr_margin_end"
            android:tint="@color/black"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_qr"/>
    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_app_bar_height"
            android:fitsSystemWindows="true"
            android:backgroundTint="@color/main_app_bar_color"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="Subtitle">

                <include
                    android:id="@+id/banners"
                    layout="@layout/banners_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="pin">

                    <HorizontalScrollView
                        android:id="@+id/main_recycler_categories"
                        android:layout_gravity="bottom"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:scrollbars="none"
                        app:layout_collapseMode="pin">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/main_categories_chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:singleLine="true"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/main_recycler_pizza_category"
                                style="@style/main_recycler_categories_chip_style"
                                android:checked="true"
                                android:text="@string/pizza" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/main_recycler_combo_category"
                                style="@style/main_recycler_categories_chip_style"
                                android:text="@string/combo" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/main_recycler_desert_category"
                                style="@style/main_recycler_categories_chip_style"
                                android:text="@string/deserts" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/main_recycler_water_category"
                                style="@style/main_recycler_categories_chip_style"
                                android:text="@string/water" />
                        </com.google.android.material.chip.ChipGroup>
                    </HorizontalScrollView>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/main_menu_recycler_item" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_bar"
            app:menu="@menu/main_bottom_menu"
            style="@style/bottom_navigation_bar_style" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</LinearLayout>